--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -181,6 +181,7 @@ You will then receive a warning modal that this operation will overwrite your ta
 
     ```bash
     dotnet build --configuration Release
+    dotnet publish
     ```
 
   - In the explorer pane in Visual Studio Code, navigate to the `src\ContosoSuitesVectorizationFunction\bin\Release\net8.0` folder, then right-click on the `publish` folder and in the context menu, select **Deploy to Function App**.
@@ -194,6 +195,9 @@ You will then receive a warning modal that this operation will overwrite your ta
     ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0302-azure-function-deployment-upload-settings.png)
 
   - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `EmbeddingDeploymentName` settings, along with other settings added by the Bicep script and deployment process.
+
+    {: .note }
+    > If you do not see these settings, you can add them yourself using the **+ Add** button on the App settings tab.
 
 - To verify the function app was deployed successfully and is working correctly:
   - Open the Log Stream for the Function App by select **Log Stream** under **Monitoring** in the left-hand menu of the Function App page in the [Azure portal](https://portal.azure.com/).
@@ -227,6 +231,9 @@ You will then receive a warning modal that this operation will overwrite your ta
   - In the **Upload Items** dialog, select the browse button and navigate to the `PropertyMaintenance.json` file in the `src\data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
 
     ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0302-upload-items-property-maintenance.png)
+
+    {: .note }
+    > If you are using a GitHub Codespaces instance, you can right-click on the `PropertyMaintenance.json` file and select **Download** to save a local copy of this file.
 
     The upload status should indicate 48 documents created.
 
