--- a/docs/04_implement_audio_transcription/0401.md
+++ b/docs/04_implement_audio_transcription/0401.md
@@ -24,6 +24,10 @@ In this task, you will extend the existing Streamlit dashboard to include speech
 The key tasks are as follows:
 
 1. In the Streamlit dashboard, open the page `4_Call_Center.py`. Begin by running the dashboard and reviewing how the Call Center page operates. The Contoso Suites team has implemented a simple file upload feature and provided you with a sample audio file for testing. That sample file is in `src/data/audio` and is entitled `01_Customer_Service_Call.wav`. Use that file to generate a test transcript and ensure you understand how the code on the page works.
+
+    {: .note }
+    > If you are using a GitHub Codespaces instance, you can right-click on the `01_Customer_Service_Call.wav` file and select **Download** to save a local copy of this file.
+
 2. The Contoso Suites development team tried to implement transcription functionality but were unable to get the code to work. They would like you to complete the `create_transcription_request()` function. There are three `TODO` items in the function.
 3. Fill in the `is_call_in_compliance()` function. They would like to perform one check every time: determine whether there was vulgarity on the call. There are two optional checks that need to happen if the user selects the appropriate checkbox. If the user checks `include_recording_message`, we want check if the caller was aware that the call is being recorded. If `is_relevant_to_topic` is active, we want to ask if the call is relevant to the hotel and resort industry. After setting up a system prompt which handles these mandatory and conditional checks, call the `make_open_ai_chat_request()` function and return its message contents.
 4. After filling in these code segments, re-run the application and ensure that you can generate a transcript of the sample call audio and can generate a compliance check. You should get a response that the call contains no vulgarity, that the user is aware of the call being recorded, and that the call does pertain to the hotel and resort industry.
