--- a/docs/04_implement_audio_transcription/0403.md
+++ b/docs/04_implement_audio_transcription/0403.md
@@ -17,14 +17,15 @@ In this task, you will implement functionality to save the text of a call transc
 
 The key tasks are as follows:
 
-1. Create a new Cosmos DB container in the `ContosoSuites` database. Name this container `CallTranscripts`. It should have a partition key of `/call_id` and the same vector embedding policy that you used in Exercise 03: a container vector policy using the `cosine` distance function, based on a `float32` data type, and `1536` dimensions, using an index type of `quantizedFlat`. Designate the field for storing vector data as `request_vector`.
+1. Create a new Cosmos DB container in the `ContosoSuites` database. Name this container `CallTranscripts`. It should have a partition key of `/call_id` and the same vector embedding policy that you used in Exercise 03: a container vector policy using the `cosine` distance function, based on a `float32` data type, and `1536` dimensions, using an index type of `diskANN`. Designate the field for storing vector data as `request_vector`.
 2. Open the `4_Call_Center.py` file in the `ContosoSuitesDashboard` folder. Complete the function `make_azure_openai_embedding_request()`, accepting a string of text and creating an embedding based on it. Be sure to use the `embedding_deployment_name` secret, as the GPT-4o model deployment will not be appropriate for generating embeddings.
-3. Complete the function `generate_embeddings_for_call_contents()`. This function should normalize the incoming text before calling `make_azure_openai_embedding_request()`. Then, you should return the actual embeddings--not just the entire response object!.
-4. Complete the function `save_transcript_to_cosmos_db()`. This function should create a new record in the `CallTranscripts` container.
-5. Open the `5_Call_Center_search.py` file. Replace the `make_azure_openai_embedding_request()` stub function with the function you created in `4_Call_Center.py`. The function call will be exactly the same between these two files.
-6. Complete the `make_cosmos_db_vector_search_request()` function. It should perform a `VectorDistance()` query and return up to `max_results` results with a minimum similarity score of `minimum_similarity_score`. The columns it should return include `id`, `call_id`, `call_transcript`, `abstractive_summary`, and the results of `VectorDistance()` as `SimilarityScore`.
-7. After filling in these code segments, re-run the application and navigate to the **Call Center** page. Ensure that you can still generate a transcript of the sample call audio. Then, run the function to save your transcript into Cosmos DB. After that, switch to the **Call Center Search** page and use the term "Airport Gateway hotel" for your search. Ensure that you get one result back. Then, increase the **Minimum Similarity Score** slider to a point higher than your similarity score and ensure you get zero records back.
-8. Deploy the application and ensure that the functionality behaves as expected as an App Service.
+3. Complete the function `make_azure_openai_embedding_request()`. This function should create a new Azure OpenAI client and then create an embedding request, using the embedding deployment name in Streamlit secrets.
+4. Complete the function `generate_embeddings_for_call_contents()`. This function should normalize the incoming text before calling `make_azure_openai_embedding_request()`. Then, you should return the actual embeddings--not just the entire response object!.
+5. Complete the function `save_transcript_to_cosmos_db()`. This function should create a new record in the `CallTranscripts` container.
+6. Open the `5_Call_Center_search.py` file. Replace the `make_azure_openai_embedding_request()` stub function with the function you created in `4_Call_Center.py`. The function call will be exactly the same between these two files.
+7. Complete the `make_cosmos_db_vector_search_request()` function. It should perform a `VectorDistance()` query and return up to `max_results` results with a minimum similarity score of `minimum_similarity_score`. The columns it should return include `id`, `call_id`, `call_transcript`, `abstractive_summary`, and the results of `VectorDistance()` as `SimilarityScore`.
+8. After filling in these code segments, re-run the application and navigate to the **Call Center** page. Ensure that you can still generate a transcript of the sample call audio. Then, run the function to save your transcript into Cosmos DB. After that, switch to the **Call Center Search** page and use the term "Airport Gateway hotel" for your search. Ensure that you get one result back. Then, increase the **Minimum Similarity Score** slider to a point higher than your similarity score and ensure you get zero records back.
+9. Deploy the application and ensure that the functionality behaves as expected as an App Service.
 
 ## Success Criteria
 
