--- a/docs/05_enhance_api_with_semantic_kernel/0502.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0502.md
@@ -203,19 +203,19 @@ The key tasks are as follows:
 
     ```python
     # React to user input
-    if prompt := st.chat_input("How I can help you today?"):
-        with st.spinner("Awaiting the Copilot's response to your question..."):
-            # Display user message in chat message container
-            st.chat_message("user").markdown(prompt)
-            # Add user message to chat history
-            st.session_state.chat_messages.append({"role": "user", "content": prompt})
-            # Send user message to Copilot and get response
-            response = send_message_to_copilot(prompt)
-            # Display assistant response in chat message container
-            with st.chat_message("assistant"):
-                st.markdown(response)
-            # Add assistant response to chat history
-            st.session_state.chat_messages.append({"role": "assistant", "content": response})
+        if prompt := st.chat_input("How I can help you today?"):
+            with st.spinner("Awaiting the Copilot's response to your question..."):
+                # Display user message in chat message container
+                st.chat_message("user").markdown(prompt)
+                # Add user message to chat history
+                st.session_state.chat_messages.append({"role": "user", "content": prompt})
+                # Send user message to Copilot and get response
+                response = send_message_to_copilot(prompt)
+                # Display assistant response in chat message container
+                with st.chat_message("assistant"):
+                    st.markdown(response)
+                # Add assistant response to chat history
+                st.session_state.chat_messages.append({"role": "assistant", "content": response})
     ```
 
   - Save the file.
@@ -246,7 +246,7 @@ The key tasks are as follows:
     - You can verify the new request was saved by navigating to the **Vector Search** page and entering a search query of "microwave not working at Grand Regency". Accept the default values for max results and minimum similarity score. Your newly saved record should be the first result in the list.
 
 - To give your agent a persona and provide it with instructions so it behaves in a more consistent manner:
-  - Open the `MaintenanceCopilot.cs` file in the `src\ContosoSuitesWeEbAPI` project and update the class-level variable defining the `ChatHistory` to pass the following string into the `ChatHistory()` object during variable decaration.
+  - Open the `MaintenanceCopilot.cs` file in the `src\ContosoSuitesWebAPI` project and update the class-level variable defining the `ChatHistory` to pass the following string into the `ChatHistory()` object during variable decaration.
 
     ```csharp
     """
@@ -282,6 +282,6 @@ The key tasks are as follows:
     - Then, send "Ok, that customer mentioned that they are in the penthouse suite, room 700, and that the television is no longer working."
       - At this point, the agent should provide the details around the maintenance request it will create, and ask if it is okay to proceed with creating and saving the request.
     - Send, "Yes, that looks correct. Please save the request to the database."
-    - You should get a response that, "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
+    - You should get a response similar to the following: "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
 
 </details>
