Updating list of resources created with Bicep

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -130,6 +130,6 @@ The key tasks are as follows:
 
       ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
 
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Redis Cache service, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
 
 </details>
