--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -9,11 +9,11 @@ parent: 'Exercise 01: Deploy application resources'
 
 ## Introduction
 
-There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises. Then, you will deploy Azure resources via a Bicep script.
+There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises. Then, you will deploy Azure resources via two Bicep scripts.
 
 ## Description
 
-In this task, you will ensure that you have a particular set of tools installed on your own computer. Then, you will prepare an Azure resource group and deploy several resources to it using a Bicep script.
+In this task, you will ensure that you have a particular set of tools installed on your own computer. Then, you will prepare an Azure resource group and deploy several resources to it using Bicep scripts.
 
 The key tasks are as follows:
 
@@ -70,6 +70,11 @@ The key tasks are as follows:
 
     {: .note }
     > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
+
+8. Use the `DeployApimAndRedisResource.bicep` script in the `src/InfrastructureAsCode/` folder to deploy **Azure API Management** and **Azure Cache for Redis Enterprise** resources into your resource group.
+
+    {: .note }
+    > **Azure API Management** and **Azure Cache for Redis Enterprise** resources can take a longer time to deploy, so they are provided in a separate file. You do not have to wait for the deployment of these resources to complete before starting on the remaining tasks in this exercise.
 
 ## Success Criteria
 
@@ -130,6 +135,10 @@ The key tasks are as follows:
 
       ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
 
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Redis Cache service, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+
+- Repeat the steps above to execute the `DeployApimAndRedisResources.bicep` script in the `src/InfrastructureAsCode/` folder.
+  - **You do not need to wait for the deployment started by this Bicep script to complete** before moving on to the next task. The resources use will used in Exercise 6 on day 2 of the workshop.
+  - Once the deployment completes, you should see the resources created by the script. These include: an API Management service, a Redis Enterprise cluster, and a Redis Enterprise database.
 
 </details>
