Minor bicep updates

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -69,12 +69,14 @@ The key tasks are as follows:
 7. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
 
     {: .note }
-    > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
+    > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com/) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
 
 8. Use the `DeployApimAndRedisResource.bicep` script in the `src/InfrastructureAsCode/` folder to deploy **Azure API Management** and **Azure Cache for Redis Enterprise** resources into your resource group.
 
+    **Azure API Management** and **Azure Cache for Redis Enterprise** resources can take a longer time to deploy, so they are provided in a separate file. You do not have to wait for the deployment of these resources to complete before starting on the remaining tasks in this exercise.
+
     {: .note }
-    > **Azure API Management** and **Azure Cache for Redis Enterprise** resources can take a longer time to deploy, so they are provided in a separate file. You do not have to wait for the deployment of these resources to complete before starting on the remaining tasks in this exercise.
+    > You may receive an error while running this Bicep script related to a terminal provisioning state for the Redis Enterprise database. This may happen because you have not agreed to the legal terms and privacy statements associated with using Marketplace offerings in your subscription. To do so, open the [Azure Portal](https://portal.azure.com/), select **Create a resource** from the menu, and search for "Azure Cache for Redis". Choose the **Azure Cache for Redis** service and select Create. On the **Basics** tab of the **New Redis Cache** page, choose the **Enterprise** option under **Cache SKU**. This selection will display a **Terms** section on the form. Check the box agreeing to the legal terms and privacy statements associated with the Marketplace offering. You can then close the Create Language page and try running the Bicep script again.
 
 ## Success Criteria
 
