Fixing services list

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -141,6 +141,6 @@ The key tasks are as follows:
 
 - Repeat the steps above to execute the `DeployApimAndRedisResources.bicep` script in the `src/InfrastructureAsCode/` folder.
   - **You do not need to wait for the deployment started by this Bicep script to complete** before moving on to the next task. The resources use will used in Exercise 6 on day 2 of the workshop.
-  - Once the deployment completes, you should see the resources created by the script. These include: an API Management service, a Redis Enterprise cluster, and a Redis Enterprise database.
+  - Once the deployment completes, you should see the resources created by the script. These include: an API Management service and a Redis Enterprise cluster.
 
 </details>
